[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/sound_manager.gd" type="Script" id=1]

[node name="SoundManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="UIStream" type="AudioStreamPlayer" parent="."]
bus = "UI"

[node name="SFXStream" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="MusicStream" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="AmbienceTrack0" type="AudioStreamPlayer" parent="."]
bus = "Ambience"

[node name="AmbienceTrack1" type="AudioStreamPlayer" parent="."]
bus = "Ambience 2"

[node name="TweenOut" type="Tween" parent="."]

[node name="TweenOut2" type="Tween" parent="."]
